# VibeDeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PILOT_RELEASE.md  README.md  WINDOWS_RELEASE_TODO.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.conductor/: settings.toml
electron/: app-protocol.mjs  app-protocol.test.mjs  app-store.test.mjs  article-reader-preload.cjs  article-reader-preload.test.mjs  article-reader-worker.mjs  article-reader.mjs  article-reader.test.mjs  dashboard-database.test.mjs  dashboard-layout.test.mjs  database.mjs  development-config.mjs  development-config.test.mjs  electron-session-fetch.mjs  electron-session-fetch.test.mjs  feed-engine.mjs  feed-engine.test.mjs  feed-presentation.test.mjs  feed-settings.test.mjs  feed-virtualization.test.mjs  final-state-operation.mjs  final-state-operation.test.mjs  latest-async-operation.test.mjs  live-connectors.mjs  local-files.mjs  local-files.test.mjs  main.mjs  network-safety.mjs  preload.cjs  preload.test.mjs  publication-registry.mjs  publication-registry.test.mjs  refresh-scheduler.mjs  refresh-scheduler.test.mjs  release-scripts.test.mjs  semantic-model-download.mjs  semantic-model-download.test.mjs  semantic-model-storage.mjs  semantic-model-storage.test.mjs  semantic-search-service.test.mjs  (+15 more)
scripts/: after-sign.mjs  build-windows-signed.mjs  create-tauri-release-config.mjs  create-tauri-release-config.test.mjs  release-checksums.mjs  run-conductor.mjs  test-conductor-run.mjs  test-large-feed.mjs  test-packaged-app.mjs  test-perf-ui.mjs  test-pilot-ui.mjs  verify-packaged-fuses.mjs  verify-release-config.mjs  verify-tauri-config.mjs  verify-tauri-config.test.mjs  verify-tauri-package.mjs  verify-tauri-package.test.mjs  workflow-uses.mjs
site/: README.md  downloads.js  downloads.test.mjs  index.html
src-tauri/: Cargo.toml  WEB_PANELS.md  build.rs  tauri.conf.json
src-tauri/capabilities/: main-local.json
src-tauri/src/: article_reader.rs  commands.rs  database.rs  error.rs  external_open.rs  http_cache.rs  lib.rs  main.rs  model.rs  network.rs  refresh_worker.rs  runtime.rs  scheduler.rs  search.rs  search_sync.rs  snapshot.rs  web_panels.rs
src-tauri/tests/fixtures/: atom.xml  news-sitemap.xml  rss.xml
(+27 files in other folders)
