[package]
name = "vibedeck"
version = "0.7.5"
description = "Agrégateur local de veille pour journalistes"
authors = ["The Vibe Company"]
license = "MIT"
repository = "https://github.com/The-Vibe-Company/VibeDeck"
edition = "2021"
rust-version = "1.88"

[lib]
name = "vibedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vibedeck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
atomic-write-file = "=0.3.0"
base64 = "=0.22.1"
chrono = { version = "=0.4.42", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "=0.3.32"
quick-xml = { version = "=0.41.0", features = ["encoding"] }
reqwest = { version = "=0.13.4", default-features = false, features = ["brotli", "deflate", "gzip", "native-tls"] }
# 0.38.0 bundled SQLite 3.51.1, whose Unix VFS can deadlock when one
# connection opens while another closes a WAL database. 0.39.0 embeds
# SQLite 3.51.3, including the upstream 3.51.2 lock-order fix.
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = ["unstable"] }
tokio = { version = "=1.52.3", features = ["net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
url = "=2.5.7"
uuid = { version = "=1.18.1", features = ["serde", "v4"] }
wry = { version = "=0.55.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "=0.3.2", default-features = false, features = ["NSWorkspace"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["NSString", "NSURL"] }
objc2-web-kit = { version = "=0.3.2", default-features = false, features = ["block2", "std", "WKWebView"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "=0.38.2"
windows-core = "=0.61.2"
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
